[package]
name = "egui-miniquad-demo"
version = "0.2.0"
authors = ["rgomes <rgomes.info@gmail.com>"]
edition = "2024"

[[example]]
name = "android"
crate-type = ["cdylib"]

[[example]]
name = "demo"

[dependencies]
bytemuck = "1.9"
glam = "0.28.0"
quad-url = "0.1"
egui = { version = "0.28", features = ["bytemuck"] }
miniquad = { version = "=0.4.0" }
egui-miniquad = "0.15.0"
egui_demo_lib = { version = "0.28", default-features = false } #-- for demo purposes only

[dev-dependencies]

## -------------------------------------------------------------------------------------------

[package.metadata.android]
label = "demo"
target_sdk_version = 34
min_sdk_version = 21

build_targets = [
    "armv7-linux-androideabi", # armeabi-v7a
    "aarch64-linux-android",   # arm64-v8a
    "i686-linux-android",      # x86
    "x86_64-linux-android",    # x86_64
]

## -------------------------------------------------------------------------------------------

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["custom"] }
quad-rand = "0.2.1"

## -------------------------------------------------------------------------------------------

# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.10.0"

## -------------------------------------------------------------------------------------------

[profile.release]
opt-level = 2 # fast and small wasm

## -------------------------------------------------------------------------------------------

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
