[package]
name = "egui-miniquad-demo"
version = "0.2.0"
authors = ["rgomes <rgomes.info@gmail.com>"]
edition = "2024"

[[example]]
name = "android"
crate-type = ["cdylib"]

[[example]]
name = "demo"

[dependencies]
log = "0.4.27"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"]}
bytemuck = "1.23"
glam = "0.28.0"
quad-url = "0.1"
egui = { version = "0.28", features = ["bytemuck"] }
miniquad = { version = "=0.4.0" }
egui-miniquad = "0.15.0"
egui_demo_lib = { version = "0.28", default-features = false } #-- for demo purposes only

## -------------------------------------------------------------------------------------------

[package.metadata.android]
label = "demo"
target_sdk_version = 34
min_sdk_version = 21
build_targets = [
    "armv7-linux-androideabi", # armeabi-v7a
    "aarch64-linux-android",   # arm64-v8a
    "i686-linux-android",      # x86
    "x86_64-linux-android",    # x86_64
]

[package.metadata.android.activity_attributes]
"android:exported" =  "true"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
tracing-android = "0.2.0"

## -------------------------------------------------------------------------------------------

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["custom"] }
quad-rand = "0.2.3"

## -------------------------------------------------------------------------------------------

# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.10.2"

## -------------------------------------------------------------------------------------------

[profile.release]
opt-level = 2 # fast and small wasm

## -------------------------------------------------------------------------------------------

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
